jenkins-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-service
spec:
  type: NodePort
  selector:
    app: jenkins-master
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
      name: ui
    - name: slave
      port: 50000
      protocol: TCP
    - name: http
      port: 80
      targetPort: 8080
