ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ui-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/inbound-cidrs: 10.20.0.0/16, 10.250.0.0/16, 10.31.0.0/16,172.31.0.0/16
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:035385703479:certificate/3ea97c26-1c82-4298-b5d8-d1c1006f17e6
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  # Here is where you put your domain ex: jenkins.rocks
  - host:
    http:
      paths:
      - path: /*
        backend:
          serviceName: jenkins-service
          servicePort: ui
